kubernetes/python-tesseract.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tesseract-python
  labels:
    app: tesseract-python
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tesseract-python
  template:
    metadata:
      labels:
        app: tesseract-python
    spec:
      containers:
      - name: tesseract-python
        image: datawheel/pytesseract-oec:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 7777
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: tesseract-python-svc
spec:
  selector:
    app: tesseract-python
  ports:
    - protocol: TCP
      port: 7777
      targetPort: 7777
