kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    networking.gke.io/managed-certificates: "pytesseract"
    kubernetes.io/ingress.class: "gce"

spec:
  rules:
    - host: pytesseract.datawheel.us
      http:
        paths:
        - pathType: ImplementationSpecific
          backend:
            service:
              name: tesseract-python-svc
              port:
                number: 7777
